; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_afs.c_grub_afs_run_to_num.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_afs.c_grub_afs_run_to_num.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grub_afs_sblock = type { i32 }
%struct.grub_afs_blockrun = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.grub_afs_sblock*, %struct.grub_afs_blockrun*)* @grub_afs_run_to_num to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_afs_run_to_num(%struct.grub_afs_sblock* %0, %struct.grub_afs_blockrun* %1) #0 {
  %3 = alloca %struct.grub_afs_sblock*, align 8
  %4 = alloca %struct.grub_afs_blockrun*, align 8
  store %struct.grub_afs_sblock* %0, %struct.grub_afs_sblock** %3, align 8
  store %struct.grub_afs_blockrun* %1, %struct.grub_afs_blockrun** %4, align 8
  %5 = load %struct.grub_afs_blockrun*, %struct.grub_afs_blockrun** %4, align 8
  %6 = getelementptr inbounds %struct.grub_afs_blockrun, %struct.grub_afs_blockrun* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = call i64 @grub_afs_to_cpu32(i32 %7)
  %9 = trunc i64 %8 to i32
  %10 = load %struct.grub_afs_sblock*, %struct.grub_afs_sblock** %3, align 8
  %11 = getelementptr inbounds %struct.grub_afs_sblock, %struct.grub_afs_sblock* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = mul nsw i32 %9, %12
  %14 = load %struct.grub_afs_blockrun*, %struct.grub_afs_blockrun** %4, align 8
  %15 = getelementptr inbounds %struct.grub_afs_blockrun, %struct.grub_afs_blockrun* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @grub_afs_to_cpu16(i32 %16)
  %18 = add nsw i32 %13, %17
  ret i32 %18
}

declare dso_local i64 @grub_afs_to_cpu32(i32) #1

declare dso_local i32 @grub_afs_to_cpu16(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
